nohup.out
  File "manage.py", line 14
    ) from exc
         ^
SyntaxError: invalid syntax
